test/errors/delete_undefined.li.correct
error: delete_undefined.li:1:1: variable 'undefined_var' is not defined
│ delete undefined_var;
│ ~~~~~~~~~~~~~~~~~~~~~
│ ^
